# simple_pdf_generator

./: .gitignore  Cargo.toml  LICENSE  README.md
simple_pdf_generator/: Cargo.toml
simple_pdf_generator/assets/js/: table-generator.js
simple_pdf_generator/src/: lib.rs
simple_pdf_generator_derive/: Cargo.toml
simple_pdf_generator_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/src/: main.rs
test_suite/src/template/: index.html
