[package]
name = "simple_pdf_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.2"
futures = "0.3.28"
headless_chrome = { version = "1.0.5", features = ["fetch"] }
mime_guess = "2.0.4"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.3"
serde_json = "1.0.105"
simple_pdf_generator_derive = { version = "0", path = "../simple_pdf_generator_derive" }
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"
