[package]
name = "simple_pdf_generator"
version = "0.3.0"
authors = ["Massimiliano Montagni <massimiliano@solutiontech.tech>"]
categories = ["template-engine", "rendering", "visualization", "graphics"]
description = "A simple PDF generator based on headless Chromium"
documentation = "https://github.com/Massimiliano-solutiontech/simple_pdf_generator/blob/main/README.md"
homepage = "https://github.com/Massimiliano-solutiontech/simple_pdf_generator"
keywords = ["PDF", "HTML", "Chromium", "headless", "rendering"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Massimiliano-solutiontech/simple_pdf_generator"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.5.1", features = ["tokio-runtime", "fetcher"], default-features = false }
base64 = "0.21.3"
futures = "0.3.28"
html-escape = "0.2.13"
mime_guess = "2.0.4"
once_cell = "1.18.0"
regex = "1.9.5"
simple_pdf_generator_derive = { version = "0", path = "../simple_pdf_generator_derive" }
tokio = { version = "1.32.0", features = ["full"] }
