[package]
name = "simple_pdf_generator_derive"
version = "0.1.0"
authors = ["Massimiliano Montagni <massimiliano@solutiontech.tech>"]
categories = ["template-engine", "rendering", "visualization", "graphics"]
description = "Macros for simple_pdf_generator"
documentation = "https://github.com/Massimiliano-solutiontech/simple_pdf_generator/blob/main/README.md"
homepage = "https://github.com/Massimiliano-solutiontech/simple_pdf_generator"
keywords = ["PDF", "HTML", "Chromium", "headless", "rendering"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Massimiliano-solutiontech/simple_pdf_generator"
edition = "2021"

[lib]
name = "simple_pdf_generator_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
serde = "1.0.187"
serde_json = "1.0.105"
syn = { version = "2.0.29", features = ["full"] }
