[package]
name = "test_suite"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3.28"
serde = "1.0.187"
serde_json = "1.0.105"
simple_pdf_generator = { path = "../simple_pdf_generator" }
simple_pdf_generator_derive = { path = "../simple_pdf_generator_derive" }
tokio = { version = "1.32.0", features = ["full"] }
